# django-no-queryset-admin-actions

./: MANIFEST.in  README.md  pyproject.toml
django_no_queryset_admin_actions/: __init__.py  admin.py  apps.py  decorators.py
django_no_queryset_admin_actions/locale/de/LC_MESSAGES/: django.po
django_no_queryset_admin_actions/locale/en/LC_MESSAGES/: django.po
django_no_queryset_admin_actions/locale/es/LC_MESSAGES/: django.po
django_no_queryset_admin_actions/locale/fr/LC_MESSAGES/: django.po
django_no_queryset_admin_actions/locale/it/LC_MESSAGES/: django.po
django_no_queryset_admin_actions/locale/nl/LC_MESSAGES/: django.po
django_no_queryset_admin_actions/locale/pl/LC_MESSAGES/: django.po
django_no_queryset_admin_actions/locale/pt/LC_MESSAGES/: django.po
django_no_queryset_admin_actions/locale/ru/LC_MESSAGES/: django.po
django_no_queryset_admin_actions/locale/sv/LC_MESSAGES/: django.po
