[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["django_no_queryset_admin_actions"]

[project]
name = "django-no-queryset-admin-actions"
version = "%PACKAGE_VERSION%"
description = "Extension for the Django admin panel that makes it possible to add actions that do not require a queryset to run."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["django", "admin", "action", "actions", "queryset", "no queryset", "empty", "selection", "items", "no items"]
authors = [
  {name = "Michał Pokusa"},
]
maintainers = [
  {name = "Michał Pokusa"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 4",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["django>=3.2"]

[project.urls]
Repository = "https://github.com/michalpokusa/django-no-queryset-admin-actions"
